--- a/Project1/.project
+++ b/Project1/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>dataWriteTest.txt</name>
+			<type>1</type>
+			<location>C:/Users/joshs/git/javaProject1/Project1/project1/dataWriteTest.txt</location>
+		</link>
+	</linkedResources>
 </projectDescription>
